--- a/Empresa.ipynb
+++ b/Empresa.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPFTlQFzojGxRt0zefWKkP5",
+      "authorship_tag": "ABX9TyNsHg3tvD6v/tqlVkz0RbaD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,7 @@
       "source": [
         "from abc import ABC, abstractmethod\n",
         "\n",
+        "#AbstractEmployee class\n",
         "class AbstractEmployee(ABC):\n",
         "    new_id = 1\n",
         "\n",
@@ -42,12 +43,13 @@
         "    def say_id(self):\n",
         "        pass\n",
         "\n",
+        "#Employee class(Inherits from AbstractEmployee, contain functions or name company, saying the ID, getting, setting or deleting the employee's name)\n",
         "class Employee(AbstractEmployee):\n",
         "    new_id = 1\n",
         "\n",
         "    def __init__(self, name=None):\n",
         "        super().__init__()\n",
-        "        self.__company = \"Una empresa esclavizante\"\n",
+        "        self.__company = \"Ajonjofeel\" #Follow @Ajonjofeel on instagram if you like Sesame cream or milk :)\n",
         "        self._name = name\n",
         "\n",
         "    def say_id(self):\n",
@@ -60,8 +62,10 @@
         "        self._name = name\n",
         "\n",
         "    def del_name(self):\n",
+        "        print(f\"_{self._name} deleted\")\n",
         "        del self._name\n",
         "\n",
+        "#User class, contains functions for assigning username and role to an user\n",
         "class User:\n",
         "    def __init__(self, username, role):\n",
         "        self.username = username\n",
@@ -71,6 +75,7 @@
         "        print(\"Username:\", self.username)\n",
         "        print(\"Role:\", self.role)\n",
         "\n",
+        "#Admin class, use name and id from Employee and user classes\n",
         "class Admin(Employee, User):\n",
         "    def __init__(self, name=None):\n",
         "        super().__init__(name)\n",
@@ -80,11 +85,13 @@
         "        super().say_id()\n",
         "        print(\"I am an Admin\")\n",
         "\n",
+        "#Manager class, inherits from Admin the say_id method\n",
         "class Manager(Admin):\n",
         "    def say_id(self):\n",
         "        print(\"I am in charge.\")\n",
         "        super().say_id()\n",
         "\n",
+        "#Meeting class for add employees to a meeting, and return the number of employees in the meeting\n",
         "class Meeting:\n",
         "    def __init__(self):\n",
         "        self.attendees = []\n",
@@ -97,8 +104,7 @@
         "    def __len__(self):\n",
         "        return len(self.attendees)\n",
         "\n",
-        "\n",
-        "# Código para probar\n",
+        "#Mikheltodd testing code\n",
         "e1 = Employee()\n",
         "e2 = Employee()\n",
         "e3 = Admin(\"Rowald\")\n",
@@ -112,23 +118,24 @@
         "print(f\"# Attendees to the meeting: {len(m1)}\")\n",
         "e1.set_name(\"Ryan\")\n",
         "for e in m1.attendees:\n",
-        "    print(f\"\\nMy name is {e.get_name()} and I work for {e._Employee__company}\")\n",
-        "    e.say_id()\n",
-        "    try:\n",
-        "        e.say_user_info()\n",
-        "    except AttributeError:\n",
-        "        continue\n",
+        "  print(f\"\\nMy name is {e.get_name()} and I work for {e._Employee__company}\")\n",
+        "  e.say_id()\n",
+        "  try:\n",
+        "    e.say_user_info()\n",
+        "  except AttributeError:\n",
+        "    continue\n",
+        "e1.del_name()\n",
         "\n",
-        "e1.del_name()\n"
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OwCJC8byJlBF",
-        "outputId": "5fbac35a-1dd7-4b08-f26f-03f579713fb1"
+        "outputId": "ee1528ac-2b65-434e-8705-7411ba7b6469"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,10 +164,20 @@
             "My id is 4\n",
             "I am an Admin\n",
             "Username: 4\n",
-            "Role: Admin\n"
+            "Role: Admin\n",
+            "_Ryan deleted\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Desarrollado por Esteban Ruiz (Esteban.ruizm@upb.edu.co)"
+      ],
+      "metadata": {
+        "id": "gX_Y6LvFYoro"
+      }
     }
   ]
 }
